# template

./: ABOUT_THIS_TEMPLATE.md  CONTRIBUTING.md  Containerfile  MANIFEST.in  Makefile  README.md  pyproject.toml
.github/workflows/: precommit-auto.yml
PACKAGENAME/: __main__.py  main.py  utils.py
docs/: PACKAGENAME.md  index.md
notebooks/: template.ipynb
tests/: test_base.py
