[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "PACKAGENAME"
version = "0.0.1"
description = ""
authors = [
    {name = "jkobject", email = "jkobject@gmail.com"}
]
readme = "README.md"
license = "MIT"
keywords = []
requires-python = ">=3.10"

dependencies = [
    "numba>=0.56.0",  # This version supports Python 3.10
    "setuptools>=58.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "coverage>=7.3.2",
    "ruff>=0.6.4",
    "pytest-cov>=4.1.0",
    "gitchangelog>=3.0.4",
    "mkdocs>=1.5.3",
    "mkdocs-git-revision-date-localized-plugin>=1.0.0",
    "mkdocstrings>=0.22.0",
    "mkdocs-git-authors-plugin>=0.4.0",
    "mkdocs-jupyter>=0.2.0",
    "mkdocstrings-python>=0.10.0"
    
]

[project.urls]
repository = "https://github.com/PACKAGELOC/PACKAGENAME"

[project.scripts]
PACKAGENAME = "PACKAGENAME.__main__:main"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501", "E203", "E266", "E265", "F401", "F403"]
